[package]
name = "moebius"
version = "0.1.0"
edition = "2024"
rust-version = "1.96.0"
repository = "https://github.com/nyastech/moebius-rs"
readme = "README.md"
homepage = "https://nyas.io/"
authors = ["Manish Kumar <manish@nyas.io>"]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "moebius_app"
path = "src/main.rs"

[dependencies]
candle-core = "0.10"
candle-nn = "0.10"
candle-transformers = "0.10"
console_error_panic_hook = "0.1"
getrandom = { version = "0.3", features = ["wasm_js"] }
gloo-net = "0.6"
gloo-timers = { version = "0.3", features = ["futures"] }
js-sys = "0.3"
leptos = { version = "0.8", features = ["csr"] }
safetensors = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.99", features = ["Blob", "BlobPropertyBag", "CanvasRenderingContext2d", "console", "Document", "Element", "Event", "File", "FileList", "FileReader", "HtmlAnchorElement", "HtmlButtonElement", "HtmlCanvasElement", "HtmlElement", "HtmlImageElement", "HtmlInputElement", "ImageData", "KeyboardEvent", "Location", "MessageEvent", "MouseEvent", "PointerEvent", "ProgressEvent", "Url", "Window", "Worker", "WorkerOptions", "WorkerType", "CanvasGradient", "DomRect"] }

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[dev-dependencies]
ndarray = "0.16"
ndarray-npy = "0.9"
